# Infinidata-rdbms-simulator

./: .env.example  .gitignore  pyproject.toml  simulation.py
InfiniQuantumSim/: TLtensor.py  sqlEinSum.py
InfiniQuantumSim/db_backends/: __init__.py  duckdb_backend.py  psql_backend.py  sqlite_backend.py
tests/: test_duckdb_timeout.py  test_psql_simulation.py  test_psql_timeout.py  test_simulation_timeout.py  test_sqlite_simulation.py  test_sqlite_timeout.py  test_timeout.py
